# vi-ime

./: .gitignore  AGENTS.md  APP_RULES.md  AUTHORS  CALL_FLOW.md  CODE_GUIDE.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh  setting.conf  vi-im-x86_64.AppImage
assets/: vi-status.qml
crates/vi-daemon/: Cargo.toml
crates/vi-daemon/src/: advisor.rs  click_watch.rs  client_profile.rs  clipboard_convert.rs  doctor.rs  evdev_compose.rs  evdev_inject.rs  evdev_mode.rs  evdev_typer.rs  events.rs  game_detector.rs  ipc.rs  learning.rs  legacy_grab.rs  main.rs  notify.rs  rivals.rs  status_window.rs  sync.rs  telemetry.rs  tray.rs  tray_helpers.rs  tray_icon.rs
crates/vi-daemon/src/compositor/: mod.rs  niri.rs  probe.rs  wlr_toplevel.rs
crates/vi-daemon/src/config/: builtin.rs  effective.rs  learned.rs  mod.rs  types.rs
crates/vi-daemon/src/data/: english_common.txt  viet_syllables.txt
crates/vi-daemon/src/engine/: cheat.rs  emoji.rs  engine.rs  engine_tests.rs  fast_engine.rs  glyph.rs  mod.rs  normalize.rs  stress_fast_typing.rs  style.rs  syllable.rs  tone.rs  types.rs  viet_dict.rs
crates/vi-daemon/src/godmod/: mod.rs  models.rs  session.rs
crates/vi-daemon/src/plugin/: mod.rs
crates/vi-daemon/src/wayland/: actions.rs  commit.rs  dispatch.rs  dispatch_stubs.rs  feedback.rs  mod.rs  runtime.rs  state.rs  state_hint_tests.rs  state_timing.rs  viet_typer.rs  viet_typer_tests.rs  virtual_keyboard.rs  xkb.rs
crates/vi-daemon/tests/: integration.rs
crates/vi-daemon/tests/harness/: fake_app.rs  mod.rs  word_matrix.rs
crates/vi-settings/: Cargo.toml
crates/vi-settings/src/: main.rs
deploy/: 99-vi-ime.rules  README.md  compile.sh  install.sh  touchpad-toggle  uninstall.sh  vi-ime.service
doc/: .redesign.md  nfc.md  perfect-plan.md
docs/: ANALYSIS_AND_FIXES.md  CODE_GUIDE.md  DEBUG.md  HOWTO_run_debug.md  IMPLEMENTATION_PLAN.md  LOG_SCENARIOS.md  SUMMARY.md  TYPING_SPEED_RESEARCH.md  UNIFIED_SMART_IME_PLAN.md  VI_IM_DESIGN.md  analysis-for-roadmap.md  debt-2026-07-09.md  fix-plan-2026-07-09.md  smart-direction.md  (+5 more)
(+11 files in other folders)
